--- a/TP3/dissertation/Design/networking.tex
+++ b/TP3/dissertation/Design/networking.tex
@@ -14,9 +14,9 @@ Reading from the network was handled by designing a class which we named `Networ
 
 \subsection {Command Handling}
 
-The parsing of commands was a broad concern that affected both the server and client's activities. This motivated the need to design a `Command' class which could be used to parse commands. As described in the protocol design section, the GIM protocol follows a structured approach. For each command, it is possible to identify the command, argument, and data segments. The role of the Command class would be to parse incoming socket data into objects from which the individual segments of commands may be extracted. An additional responsibility of this class would be to convert images to and from base64 encoding for transmission over the network (as required by the GIM Protocol).
+The parsing of commands was a broad concern that affected both the server and client's activities. This motivated the need to design a `Command' class which could be used to parse commands. As described in the protocol design section, the GIM protocol follows a structured approach. For each command, it is possible to identify the command, argument, and data segments. The role of the Command class would be to parse incoming socket data into objects from which the individual segments of commands may be extracted. An additional responsibility of this class would be to convert images to and from base64 encoding for transmission over the network (as required by the GIM protocol).
 
-We thought this was a sensible design decision as it provided a layer of abstraction. If the GIM Protocol were to change, only the Command class would have to be edited. This led to the design of a `util' package as part of our project's structure, which included classes common to both the client and the server networking code. 
+We thought this was a sensible design decision as it provided a layer of abstraction. If the GIM protocol were to change, only the Command class would have to be edited. This led to the design of a `util' package as part of our project's structure, which included classes common to both the client and the server networking code. 
 
-On creation of this command object by the `NetworkReader' class, it would be handed to the command buffer for retrieval and further parsing by the controller, then translation into a method call. In addition to promoting code re-use, this approach had the advantage of hiding the structure of the GIM Protocol from the client, which increased the degree of modularity in the system.   
+On creation of this command object by the `NetworkReader' class, it would be handed to the command buffer for retrieval and further parsing by the controller, then translation into a method call. In addition to promoting code re-use, this approach had the advantage of hiding the structure of the GIM protocol from the client, which increased the degree of modularity in the system.   
 
